--- a/Login-Session-Lab/templates/display.html
+++ b/Login-Session-Lab/templates/display.html
@@ -9,6 +9,9 @@
 
 <!-- Display the variables from the login session here!
  -->
+ 	<p>quote: {{q}}</p>
+ 	<p>author: {{a}}</p>
+ 	<p>age: {{ag}}</p>
 
 </body>
 </html>
