--- a/Login-Session-Lab/templates/home.html
+++ b/Login-Session-Lab/templates/home.html
@@ -11,6 +11,17 @@
 
 <!-- Create your form here!
  -->
+ 	<form id="formid" action="/" method="POST">
+ 	<input type="text" name="quote" placeholder="quote">
+    <br>
+    <input type="text" name="author" placeholder="author">
+    <br>
+    <input type="text" name="age" placeholder="age">
+    <br>
+    <input type="submit" value="Submit"> 
+
+ 		
+ 	</form>
  
 </body>
 </html>
